fix  margin on heading-icon small on mobile

--- a/scss/_patterns_heading-icon.scss
+++ b/scss/_patterns_heading-icon.scss
@@ -37,12 +37,16 @@
   .p-heading-icon--small {
     .p-heading-icon__img {
       height: map-get($icon-sizes, heading-icon--x-small);
-      margin-top: 0;
       width: map-get($icon-sizes, heading-icon--x-small);
+
+      @media (max-width: $breakpoint-medium) {
+        margin-top: $spv-intra--condensed;
+      }
 
       @media (min-width: $breakpoint-medium) {
         height: map-get($icon-sizes, heading-icon--small);
         width: map-get($icon-sizes, heading-icon--small);
+        margin-top: 0;
       }
     }
   }
